Some utility stuff

--- a/.bazelrc
+++ b/.bazelrc
@@ -53,3 +53,4 @@ build --action_env=CCACHE_DISABLE=1
 
 # Try to import user-specific configuration local to workspace.
 try-import %workspace%/user.bazelrc
+build --define NO_DREAL=ON
