--- a/apps/BUILD.bazel
+++ b/apps/BUILD.bazel
@@ -18,6 +18,7 @@ cc_binary(
         "@drake//systems/primitives:multiplexer",
         "@drake//systems/primitives:constant_vector_source",
         "@drake//visualization:visualization_config_functions",
+        "@drake//systems/controllers:pid_controller",
     ],
 )
 
